--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 	<div class="container">	 
 			<p> <br> <br> </p>
 			<a href="https://martin-kn.github.io/Proyectos/"  class="btn-1">Proyectos Personales</a>
+			<p><br></p>
+			<a href="https://github.com/Martin-kn/"  class="btn-1">Github</a>
 			
 	</div>
 	
