--- a/index.html
+++ b/index.html
@@ -1,52 +1,52 @@
-<!DOCTYPE html>
-<html> 
+<<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>CV</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="linux.png" type="image/icon type">
+    <style>
+        a:link {
+            text-decoration: none;
+            }
+        a:hover {
+            text-decoration: none;
+            }
+    </style>
 
-	<HEAD> 	 
-  	  	<TITLE> CV </TITLE>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width,initial-scale=1.0">
-	<link rel="stylesheet" href="style.css">
-		<style>
-        		a:link {
-          		  text-decoration: none;
-       			 }
-        		a:hover {
-        		    text-decoration: none;
-       			 }
-    		</style>
-  	</HEAD> 
-	 
- 	<BODY>
-		
-	<p><br></p>
+</head>
+<body>
+   	<br>
  	<div class="user one">
 	</div>
 
-	<h1> Mi nombre es Martin </h1>
-	<h3> Usuario de linux - Estudiante de analista de sistemas - Interesado en la ciberseguridad </h3>
-		
+    	<div class="b1">
+        	<h1> Mi nombre es Martin </h1>
+		<h3> Usuario de linux - Estudiante de analista de sistemas - Interesado en la ciberseguridad </h3>
+    	</div> 
+	
 	<div class="box">
-	
-	<p> <br><br> En la actualidad estoy llevando a cabo un proyecto que consiste en tener mis propios servidores
-	tanto para uso personal como para hacer pruebas, practicar redes y seguridad.</p>
-	<p> Y en un futuro aplicaré los conocimientos adquiridos de programación para poder crear aplicaciones web
-	que faciliten información o automaticen tareas del día a día. </p> 
-	</div>
+            <p><br><br> En la actualidad estoy llevando a cabo un proyecto que consiste en tener mis propios servidores
+            tanto para uso personal como para hacer pruebas, practicar redes y seguridad.
+            Y en un futuro aplicaré los conocimientos adquiridos de programación para poder crear aplicaciones web
+            que faciliten información o automaticen tareas del día a día. </p> 
+        
+            <p><br>En mi tiempo libre me gusta capacitarme en ciberseguridad, les dejo mi perfil de TryHackMe: <br><br></P>   
+    	</div>
 
-	<p> <br>En mi tiempo libre me gusta capacitarme en ciberseguridad, les dejo mi perfil de TryHackMe: <br><br> </P>
-	
-	 <img src="https://tryhackme-badges.s3.amazonaws.com/UserN4me.png" alt="TryHackMe">	
+	<img src="https://tryhackme-badges.s3.amazonaws.com/UserN4me.png" alt="TryHackMe">	
 	<p><br>Te invito a dar click en el botón de abajo y ver mis proyectos.</p>
+
 	<div class="container">	 
 			<p> <br> <br> </p>
 			<a href="https://martin-kn.github.io/Proyectos/"  class="btn-1">Proyectos Personales</a>
 			<p><br></p>
-			<a href="https://github.com/Martin-kn/"  class="btn-1">Github</a>
-			
+			<a href="https://github.com/Martin-kn/"  class="btn-1">Github</a>			
 	</div>
 	
 	<p><br></p>
-
-
- 	<BODY>
+    
+</body>
 </html>
