--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  	<div class="user one">
 	</div>
 
-    	<div class="b1">
+    	<div class="title">
         	<h1> Mi nombre es Martin </h1>
 		<h3> Usuario de linux - Estudiante de analista de sistemas - Interesado en la ciberseguridad </h3>
     	</div> 
