--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
 	<div class="container">	 
 			<p> <br> <br> </p>
-			<a href="https://martin-kn.github.io/Proyectos/"  class="btn-1">Proyectos Personales</a>
+			<a href="https://martin-kn.github.io/Gallery/"  class="btn-1">Proyectos</a>
 			<p><br></p>
 			<a href="https://github.com/Martin-kn/"  class="btn-1">Github</a>			
 	</div>
