--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 			<p> <br> <br> </p>
 			<a href="https://martin-kn.github.io/Gallery/"  class="btn-1">Proyectos</a>
 			<p><br></p>
+			<a href="https://martin-kn.github.io/"  class="btn-1">Blog</a>
+            		<p><br></p>
 			<a href="https://github.com/Martin-kn/"  class="btn-1">Github</a>			
 	</div>
 	
